--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "15.1.2",
-    "@next/third-parties": "^15.1.2",
+    "@next/mdx": "15.1.4",
+    "@next/third-parties": "15.1.4",
     "@types/mdx": "^2.0.13",
     "citation-js": "^0.7.16",
-    "next": "15.1.2",
+    "next": "15.1.4",
     "raw-loader": "^4.0.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -25,17 +25,17 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
-    "@types/react": "19.0.2",
+    "@types/react": "19.0.4",
     "@types/react-dom": "19.0.2",
     "eslint": "^8",
-    "eslint-config-next": "15.1.2",
+    "eslint-config-next": "15.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "vitest": "^2.1.8"
   },
   "overrides": {
-    "@types/react": "19.0.2",
+    "@types/react": "19.0.4",
     "@types/react-dom": "19.0.2"
   }
 }
