--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextjs-personal-site",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,31 +14,32 @@
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "15.1.6",
-    "@next/third-parties": "15.1.6",
+    "@next/mdx": "15.3.1",
+    "@next/third-parties": "15.3.1",
     "@types/mdx": "^2.0.13",
     "citation-js": "^0.7.16",
-    "next": "15.1.6",
+    "next": "15.3.1",
     "raw-loader": "^4.0.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "rehype-slug": "^6.0.0",
-    "shiki": "^2.0.0"
+    "shiki": "^3.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
-    "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
     "eslint": "^8",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "15.3.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5",
     "vitest": "^3.0.0"
   },
   "overrides": {
-    "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3"
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2"
   }
 }
