--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint",
     "test": "vitest run",
@@ -14,14 +14,15 @@
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "15.3.2",
-    "@next/third-parties": "15.3.2",
+    "@next/mdx": "15.5.0",
+    "@next/third-parties": "15.5.0",
     "@types/mdx": "^2.0.13",
     "citation-js": "^0.7.16",
-    "next": "15.3.2",
+    "next": "15.5.0",
+    "patch-package": "^8.0.0",
     "raw-loader": "^4.0.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "rehype-slug": "^6.0.0",
     "shiki": "^3.0.0"
   },
@@ -29,17 +30,17 @@
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
-    "@types/react": "19.1.3",
-    "@types/react-dom": "19.1.3",
+    "@types/react": "19.1.10",
+    "@types/react-dom": "19.1.7",
     "eslint": "^8",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "15.5.0",
     "postcss": "^8",
     "tailwindcss": "^4.0.0",
     "typescript": "^5",
     "vitest": "^3.0.0"
   },
   "overrides": {
-    "@types/react": "19.1.3",
-    "@types/react-dom": "19.1.3"
+    "@types/react": "19.1.10",
+    "@types/react-dom": "19.1.7"
   }
 }
