--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "vitest run",
@@ -14,15 +14,15 @@
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "15.5.6",
-    "@next/third-parties": "15.5.6",
+    "@next/mdx": "16.0.10",
+    "@next/third-parties": "16.0.10",
     "@types/mdx": "^2.0.13",
     "citation-js": "^0.7.16",
-    "next": "15.5.6",
+    "next": "16.0.10",
     "patch-package": "^8.0.0",
     "raw-loader": "^4.0.2",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "rehype-slug": "^6.0.0",
     "shiki": "^3.0.0"
   },
@@ -30,17 +30,17 @@
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
-    "eslint": "^8",
-    "eslint-config-next": "15.5.6",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.10",
     "postcss": "^8",
     "tailwindcss": "^4.0.0",
     "typescript": "^5",
-    "vitest": "^3.0.0"
+    "vitest": "^4.0.1"
   },
   "overrides": {
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2"
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
